infrastructure/gateway/kustomize/primary-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: primary-gateway
  namespace: envoy-gateway-system

  annotations:
    cert-manager.io/cluster-issuer: sidewinder-ca

spec:
  gatewayClassName: envoy-gateway

  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: primary-gateway-proxy

  listeners:
    - name: git-ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute

    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute

    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: sidewinder-lan-tls

    - name: http-alt
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute

    - name: jellyfin
      protocol: HTTP
      port: 8096
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute

    - name: minecraft
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute

    - name: minecraft-vc
      protocol: UDP
      port: 24454
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: UDPRoute

    - name: minecraft-02
      protocol: TCP
      port: 25566
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute

    - name: minecraft-i-2t6sqrjy
      protocol: TCP
      port: 25568
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute

    - name: wireguard
      protocol: UDP
      port: 51820
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: UDPRoute
